--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -3,29 +3,30 @@ name: Build and Deploy Pelican Site
 on:
   push:
     branches:
-      - main
+      - main  # 或你使用的分支名（如 master）
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10  # ✅ 兼容的版本，不要写成 3.1！
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pelican markdown ghp-import
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pelican markdown ghp-import
 
-    - name: Build site with Pelican
-      run: pelican content -s publishconf.py
+      - name: Build site with Pelican
+        run: pelican content -s publishconf.py
 
-    - name: Deploy to GitHub Pages
-      run: |
-        ghp-import output -b gh-pages -p
+      - name: Deploy to GitHub Pages
+        run: |
+          ghp-import output -b gh-pages -p
+
