--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -3,36 +3,33 @@ name: Build and Deploy Pelican Site
 on:
   push:
     branches:
-      - main  # 或你使用的分支名（如 master）
+      - main
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11  # ✅ 兼容的版本，不要写成 3.1！
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pelican markdown ghp-import
+    - name: Install dependencies
+      run: |
+        pip install pelican markdown ghp-import
 
-      - name: Build site with Pelican
-        run: pelican content -s publishconf.py
+    - name: Build Pelican site
+      run: pelican content -s publishconf.py
 
-      - name: Deploy to GitHub Pages
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          ghp-import output -b gh-pages
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+    - name: Deploy to GitHub Pages using PAT
+      env:
+        TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+      run: |
+        git config --global user.name "haiminggroup"
+        git config --global user.email "haiminggroup@gmail.com"
+        ghp-import output -b gh-pages
+        git push https://$TOKEN@github.com/${{ github.repository }} gh-pages
